# WSR-Toolbox-cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py  viz_latest_output.sh  viz_latest_output_multi.sh
Cython_modules/: WSR_Module.pxd  wsr_module.pyx
config/: config_3D_SAR.json  config_3D_SAR_multi.json  config_cs286.json  config_gpio.json  config_rx0.json  config_spoofer_WSR_Dataset.json  config_spoofer_sim.json  config_template.json
data/: groundtruth_positions.json
data/LOS_2D_1_RX_1_TX_RX_P0_TX_P1/: info.txt
data/LOS_2D_1_RX_1_TX_RX_P0_TX_P1/2D_TX_dataset_traj_rx/: odom_rx_trajectory_2021-03-04_155046_.csv  rx_trajectory_2021-03-04_155046_.csv  t265_rx_trajectory_2021-03-04_154747_.csv
data/Line-of-Sight/2D_1_RX_1_TX_RX_P0_TX_P1/2D_TX_dataset_traj_rx/: odom_rx_trajectory_2021-03-04_154747_.csv  odom_rx_trajectory_2021-03-04_154913_.csv  odom_rx_trajectory_2021-03-04_155147_.csv  t265_rx_trajectory_2021-03-04_155147_.csv
data/Line-of-Sight/2D_trajectory_sample/: groundtruth_positions.json
data/Line-of-Sight/2D_trajectory_sample/trajectory_data/: odom_rx_trajectory_2021-03-04_154958_.csv  rx_trajectory_2021-03-04_154746_.csv  rx_trajectory_2021-03-04_154912_.csv  rx_trajectory_2021-03-04_154957_.csv  rx_trajectory_2021-03-04_155147_.csv  t265_rx_trajectory_2021-03-04_154913_.csv  t265_rx_trajectory_2021-03-04_154958_.csv  t265_rx_trajectory_2021-03-04_155046_.csv
data/Line-of-Sight/3D_1_RX_2_TX_formation_2/: groundtruth_positions.json  info.txt
data/Line-of-Sight/3D_1_RX_2_TX_formation_2/3D_TX_dataset_traj_rx/: t265_rx_trajectory2021-03-03_212146.csv
data/Line-of-Sight/3D_1_RX_2_TX_formation_2/3D_rx_traj/: t265_rx_trajectory2021-03-03_212019.csv
data/Line-of-Sight/3D_trajectory_sample/: groundtruth_positions.json
data/Line-of-Sight/3D_trajectory_sample/trajectory_data/: rx_trajectory_2021-03-02_175142_.csv  rx_trajectory_2021-03-02_175219_.csv  rx_trajectory_2021-03-02_175249_.csv  rx_trajectory_2021-03-02_175341_.csv  rx_trajectory_2021-03-02_175527_.csv  rx_trajectory_2021-03-03_212019_.csv  rx_trajectory_2021-03-03_212146_.csv  rx_trajectory_2021-03-03_212243_.csv  t265_rx_trajectory2021-03-02_175142.csv  t265_rx_trajectory2021-03-02_175219.csv  t265_rx_trajectory2021-03-02_175249.csv  t265_rx_trajectory2021-03-02_175341.csv  (+2 more)
data/Line-of-Sight/Moving_ends_sample/: .~lock.tx_trajectory.csv#  rx_trajectory.csv  tx_trajectory.csv
data/Sample_data/: groundtruth_positions.json
data/Sample_data/single_antenna/: odom_rx_trajectory_2021-06-27_202550_.csv  odom_rx_trajectory_2021-06-28_193409_.csv  rx_trajectory_2021-06-27_202550_.csv  rx_trajectory_2021-06-28_193409_.csv  t265_rx_trajectory_2021-06-27_202550_.csv  t265_rx_trajectory_2021-06-28_193409_.csv
data/Test-remote-processing/: rx_trajectory_2021-06-02_153708_.csv
data/multipath_analysis_WSR_distributed/: rx_trajectory_2022-03-04_161027_.csv  rx_trajectory_2022-03-04_164835_.csv  rx_trajectory_2022-03-07_161253_.csv  rx_trajectory_2022-03-07_161722_.csv  rx_trajectory_2022-03-07_192446_.csv  rx_trajectory_2022-03-07_192747_.csv  rx_trajectory_2022-03-07_192938_.csv  rx_trajectory_2022-03-07_210112_.csv  rx_trajectory_2022-03-07_211903_.csv  rx_trajectory_2022-03-07_212246_.csv
data/online_data/: groundtruth_positions.json  rx_trajectory_2021-06-09_174832.csv
debug/: tx_00:21:6A:30:D2:3C_all_channel_data.json  tx_00:21:6A:30:D2:3C_interpl_trajectory.json  tx_00:21:6A:30:D2:3C_sliced_channel_data.json  tx_00:21:6A:3E:F5:7E_all_channel_data.json  tx_00:21:6A:3E:F5:7E_interpl_trajectory.json  tx_00:21:6A:3E:F5:7E_sliced_channel_data.json  tx_0:33:106:48:210:60_all_channel_data.json  tx_0:33:106:48:210:60_aoa_profile_2021-03-03_212019.csv  tx_0:33:106:48:210:60_sliced_channel_data.json  tx_0:33:106:62:245:126_all_channel_data.json  tx_0:33:106:62:245:126_aoa_profile_2021-03-03_212019.csv  tx_0:33:106:62:245:126_aoa_profile_2021-03-04_154912.csv  tx_0:33:106:62:245:126_interpl_trajectory.json  tx_0:33:106:62:245:126_sliced_channel_data.json
include/csitoolbox/: Base.h  Error.h  WIFI_Agent.h  WSR_Main.h  WSR_Module.h  WSR_Util.h
launch/: wsr_all.launch  wsr_check_csi.launch  wsr_pub.launch
msg/: wsr_aoa.msg  wsr_aoa_array.msg
samples/: odom_rx_trajectory_2022-08-31_103703.csv
scripts/: H_imag_1804289383.csv  H_real_1804289383.csv  RobotTrajectory.py  check_music.m  filter_data.py  main.py  main_pub.py  main_sub.py  rx_trajectory.csv  test.py  test_wsr_module.py  tx1_ouptut_2022-03-29_150635.json  tx1_ouptut_2022-03-30_193940.json  verify_csi.py  visualize_aoa_profile.py  viz_aoa.m  viz_aoa_matlab.py  viz_channel_data.py  viz_data.sh  viz_data.sh~afdfda4... corrected visualization  viz_disp_vs_rssi.py  viz_disp_vs_rssi_aggregate.py  viz_latest_output_multi.sh  viz_profile.m  viz_traj.py
src/: WIFI_Agent.cpp  WSR_Main.cpp  WSR_Module.cpp  WSR_Util.cpp  data_processing.cpp  process_dataset_all.cpp  process_dataset_all_spoofing.cpp  remote_processing.cpp  remote_processing_multi.cpp  test_csi_data.cpp  test_wsr.cpp  test_wsr_two_antenna_rotor.cpp
(+1 files in other folders)
